# simplewall

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
nix/: package.nix
src/: main.rs  wallpaper.rs  wayland.rs
