[package]
name = "simplewall"
description = "Simple wallpaper utility for Wayland compositors with layer shell support"
version = "0.1.0-wip"
edition = "2024"
authors = ["David Wolff"]
repository = "https://github.com/dav-wolff/simplewall"

[dependencies]
wayland-client = "0.31.11"
smithay-client-toolkit = { version = "0.20.0", default-features = false }
image = "0.25.8"
fast_image_resize = { version = "5.3.0", features = ["image"] }
clap = { version = "4.5.47", features = ["derive"] }
